# streamlit-starter-app

./: README.md  pyproject.toml
app/: app.py
