[tool.poetry]
name = "streamlit-starter-app"
version = "0.1.0"
description = ""
authors = ["Federico Lanzani <federico@federicolanzani.com>"]
readme = "README.md"
packages = [{include = "streamlit_starter_app"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
